# VisualNovalScripter

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  script.md
Lua/: CMakeLists.txt
src/: CMakeLists.txt  LuaBasicWidget.hpp  LuaEvent.hpp  LuaMainWindow.hpp  LuaState.hpp  LuaStateMachine.hpp  LuaTransition.hpp  luahelper.h  main.cpp
